Создание фона header и html-структуры страницы

--- a/index.html
+++ b/index.html
@@ -4,8 +4,113 @@
 	<title>Сайт компании Webim</title>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
+	<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 <body>
+	<div class='wrapper'>
+		<div class='header'>
+			<div class='reg'></div>
+			<div class='menu'></div>
+			<div class='logo'></div>
+		</div>
+		<div class='install'>
+			<h3></h3>
+			<p></p>
+			<div class='price'>
+				<button class='btn'></button>
+				<button class='btn tarif'></button>
+			</div>
+		</div>
+		<div class='easyInst'>
+			<h3></h3>
+			<p></p>
+			<div class='inst-reg'></div>
+			<div class='inst-HTML'></div>
+		</div>
+		<div class='installHTML'>
+			<h3></h3>
+			<div>
+				<span></span>
+				<h5><a></a></h5>
+				<p></p>
+			</div>
+		</div>
+		<div class='installApp'>
+			<h3></h3>
+			<p></p>
+			<div>
+				<span></span>
+				<h5><a></a></h5>
+				<p></p>
+			</div>	
+		</div>
+		<div class='afterInst'>
+			<h3></h3>
+			<p></p>
+			<div>
+				<span></span>
+				<h5><a></a></h5>
+				<p></p>
+			</div>
+			<div class='price'>
+				<button class='btn'></button>
+				<button class='btn free'></button>
+			</div>
+		</div>
+		<div class='services'>
+			<h6></h6>
+			<div class='servicesCom'>
+				<div class='_1col'>
+					<img>
+					<p></p>
+				</div>
+				<div class='_2col'>
+					<img>
+					<p></p>
+				</div>
+				<div class='_3col'>
+					<img>
+					<p></p>
+				</div>
+			</div>
+		</div>
+		<div class='footer'>
+			<div class='copyright'>
+				<img>
+				<p></p>
+				<p></p>
+			</div>
+			<div class='contact'>
+				<div class='telCom'>
+					<img>
+					<p></p>
+				</div>
+				<div class='telMsk'>
+					<p></p>
+					<p></p>
+				</div>
+				<div class='telSpb'>
+					<p></p>
+					<p></p>
+				</div>
+			</div>
+			<div class='time'>
+				<p></p>
+				<p></p>
+				<p></p>
+				<div class='social'>
+					<div class='socialItem VK'>
+					</div>
+					<div class='socialItem Face'>
+					</div>
+					<div class='socialItem Twit'>
+					</div>
+					<div class='socialItem Skype'>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	<script src='dist/main.js'></script>
 </body>
 </html>
