--- a/index.html
+++ b/index.html
@@ -9,95 +9,190 @@
 <body>
 	<div class='wrapper'>
 		<div class='header'>
-			<div class='reg'></div>
-			<div class='menu'></div>
-			<div class='logo'></div>
+			<div class='reg'>
+				<p><a>Вход</a></p>
+				<p><a>Регистрация</a></p>
+			</div>
+			<div class='menu'>
+				<p>Возможности</p>
+				<p>Тарифы</p>
+				<p>Партнерам</p>
+				<p>Помощь</p>
+			</div>
+			<img>
 		</div>
 		<div class='install'>
-			<h3></h3>
-			<p></p>
+			<h3>УСТАНОВКА WEBIM</h3>
+			<p>Установка онлайн-консультанта Webim на ваш сайт не займет много времени. Вы можете установить онлайн-консультант Webim на ваш сайт и протестировать его в течение 7 дней бесплатно. </p>
 			<div class='price'>
-				<button class='btn'></button>
-				<button class='btn tarif'></button>
+				<button class='btn'>ПОПРОБОВАТЬ БЕСПЛАТНО</button>
+				<button class='btn tarif'>ТАРИФЫ</button>
 			</div>
 		</div>
 		<div class='easyInst'>
-			<h3></h3>
-			<p></p>
-			<div class='inst-reg'></div>
-			<div class='inst-HTML'></div>
+			<h3>ПРОСТАЯ УСТАНОВКА</h3>
+			<p>Установка онлайн-консультанта Webim не займет более 15 минут</p>
+			<div class='inst-reg'>
+				<img>
+				<p><a>Регистрация</a></p>
+			</div>
+			<div class='inst-HTML'>
+				<img>
+				<p><a>Установка HTML-кода</a></p>
+			</div>
 		</div>
 		<div class='installHTML'>
-			<h3></h3>
+			<h3>УСТАНОВКА HTML-КОДА</h3>
 			<div>
 				<span></span>
-				<h5><a></a></h5>
-				<p></p>
+				<h5><a>Установка HTML-кода Webim для сайтов на Joomla</a></h5>
+				<p>Документация по внедрению сервиса Webim на сайтах, построенных на базе<b>CMS Joomla</b>.</p>
+			</div>
+			<div>
+				<span></span>
+				<h5><a>Установка HTML-кода Webim для сайтов на Wordrpess</a></h5>
+				<p>Документация по внедрению сервиса Webim на сайтах, построенных на базе<b>Wordrpess</b>.</p>
+			</div>
+			<div>
+				<span></span>
+				<h5><a>Установка HTML-кода Webim для сайтов на uCoz.ru</a></h5>
+				<p>Документация по внедрению сервиса Webim на сайтах, построенных на базе<b>uCoz.ru</b>.</p>
+			</div>
+			<div>
+				<span></span>
+				<h5><a>Установка HTML-кода Webim для сайтов на webasyst.ru</a></h5>
+				<p>Документация по внедрению сервиса Webim на сайтах, построенных на базе<b>webasyst.ru</b>.</p>
+			</div>
+			<div>
+				<span></span>
+				<h5><a>Установка HTML-кода Webim для любого сайта</a></h5>
+				<p>Документация по внедрению сервиса Webim на сайтах с другой CMS или написанных вручную.</p>
 			</div>
 		</div>
 		<div class='installApp'>
-			<h3></h3>
-			<p></p>
+			<h3>УСТАНОВКА ПРИЛОЖЕНИЯ ДЛЯ ОПЕРАТОРОВ WEBIM DASHBOARD</h3>
+			<p>Чтобы быть на связи с клиентами всегда, установите приложение Webim Dashboard</p>
 			<div>
 				<span></span>
-				<h5><a></a></h5>
-				<p></p>
+				<h5><a>Установка приложения Webim Dashboard для iPhone</a></h5>
+				<p>Документация по установке дополнительного программного обеспечения для операторов <b>сервиса Webim</b>, использующих iPhone/iPad/etc от компании Apple.</p>
+			</div>
+			<div>
+				<span></span>
+				<h5><a>Установка приложения Webim Dashboard для Android</a></h5>
+				<p>Документация по установке дополнительного программного обеспечения для операторов <b>сервиса Webim</b>, использующих платформу Google Android.</p>
+			</div>
+			<div>
+				<span></span>
+				<h5><a>Установка приложения Webim Dashboard для Ubuntu</a></h5>
+				<p>Документация по установке дополнительного программного обеспечения для операторов <b>сервиса Webim</b>, использующих платформу Ubuntu.</p>
+			</div>
+			<div>
+				<span></span>
+				<h5><a>Установка приложения Webim Dashboard</a></h5>
+				<p>Документация по установке дополнительного программного обеспечения для операторов <b>сервиса Webim</b> под ОС Microsoft Windows.</p>
+			</div>
+			<div>
+				<span></span>
+				<h5><a>Создание приложения Webim для Mac OS </a></h5>
+				<p>Пошаговая инструкция создания приложения для оператора Webim для Mac OS с помощью Fluid</p>
 			</div>	
 		</div>
 		<div class='afterInst'>
-			<h3></h3>
-			<p></p>
+			<h3>ЧТО ВАС ЖДЕТ ПОСЛЕ УСТАНОВКИ</h3>
+			<p>Идейные соображения высшего порядка, а также сложившаяся структура организации позволяет</p>
 			<div>
-				<span></span>
-				<h5><a></a></h5>
-				<p></p>
+				<img>
+				<p><b>Шаг 1.</b>Создание учетной записи компании и администратора</p>
+			</div>
+			<div>
+				<img>
+				<p><b>Шаг 2.</b>Активация учетной записи</p>
+			</div>
+			<div>
+				<img>
+				<p><b>Шаг 3.</b>Начальная настройка</p>
+			</div>
+			<div>
+				<img>
+				<p><b>Шаг 4.</b>Установка кнопки Webim на сайт/p>
+			</div>
+			<div>
+				<img>
+				<p><b>Шаг 5.</b>Регистрация оператора</p>
+			</div>
+			<div>
+				<img>
+				<p><b>Шаг 6.</b>Тест сервиса</p>
 			</div>
 			<div class='price'>
-				<button class='btn'></button>
-				<button class='btn free'></button>
+				<button class='btn'>Все возможности Webim</button>
+				<button class='btn free'>Протестировать бесплатно</button>
 			</div>
 		</div>
 		<div class='services'>
-			<h6></h6>
+			<h6>Webim – это не только онлайн-консультант. Интегрируйте и другие каналы, чтобы клиенты могли обращаться к вам любым удобным способом</h6>
 			<div class='servicesCom'>
 				<div class='_1col'>
-					<img>
-					<p></p>
+					<div>
+						<img>
+						<p>Социальные сети</p>
+					</div>
+					<div>
+						<img>
+						<p>Мессенджеры</p>
+					</div>
+					<div>
+						<img>
+						<p>Чат-боты</p>
+					</div>
 				</div>
 				<div class='_2col'>
-					<img>
-					<p></p>
+					<div>
+						<img>
+						<p>Форма обратной связи</p>
+					</div>
+					<div>
+						<img>
+						<p>Яндекс.Диалоги</p>
+					</div>
 				</div>
 				<div class='_3col'>
-					<img>
-					<p></p>
+					<div>
+						<img>
+						<p>Чат в вашем мобильном приложении </p>
+					</div>
+					<div>
+						<img>
+						<p>Электронная почта</p>
+					</div>
 				</div>
 			</div>
 		</div>
 		<div class='footer'>
 			<div class='copyright'>
 				<img>
-				<p></p>
-				<p></p>
+				<p>Webim 2008-2017</p>
+				<p>Все права защищены</p>
 			</div>
 			<div class='contact'>
 				<div class='telCom'>
 					<img>
-					<p></p>
+					<p>+7(800)500-49-32</p>
 				</div>
 				<div class='telMsk'>
-					<p></p>
-					<p></p>
+					<p>+7(495)322-37-54</p>
+					<p>Москва, Серебряническая набережная, 29</p>
 				</div>
 				<div class='telSpb'>
-					<p></p>
-					<p></p>
+					<p>+7(812)385-53-37</p>
+					<p>Санкт-Петербург, Чкаловский проспект, 15</p>
 				</div>
 			</div>
 			<div class='time'>
-				<p></p>
-				<p></p>
-				<p></p>
+				<p>contact@webim.ru</p>
+				<p>sales@webim.ru</p>
+				<p>понедельник-пятница с 10.00 - 18.00</p>
 				<div class='social'>
 					<div class='socialItem VK'>
 					</div>
