--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 			</div>
 			<img>
 		</div>
-		<div class='install'>
-			<h3>УСТАНОВКА WEBIM</h3>
-			<p>Установка онлайн-консультанта Webim на ваш сайт не займет много времени. Вы можете установить онлайн-консультант Webim на ваш сайт и протестировать его в течение 7 дней бесплатно. </p>
+		<div class='install grey'>
+			<h3 class='h3-font36'>УСТАНОВКА WEBIM</h3>
+			<p class='p-font'>Установка онлайн-консультанта Webim на ваш сайт не займет много времени. Вы можете установить онлайн-консультант Webim на ваш сайт и протестировать его в течение 7 дней бесплатно. </p>
 			<div class='price'>
-				<button class='btn'>ПОПРОБОВАТЬ БЕСПЛАТНО</button>
-				<button class='btn tarif'>ТАРИФЫ</button>
+				<button class='btn left-btn'>ПОПРОБОВАТЬ БЕСПЛАТНО</button>
+				<button class='btn-tarif right-btn'>ТАРИФЫ</button>
 			</div>
 		</div>
 		<div class='easyInst'>
-			<h3>ПРОСТАЯ УСТАНОВКА</h3>
-			<p>Установка онлайн-консультанта Webim не займет более 15 минут</p>
+			<h3 class='h3-font30'>ПРОСТАЯ УСТАНОВКА</h3>
+			<p class='p-font'>Установка онлайн-консультанта Webim не займет более 15 минут</p>
 			<div class='inst-reg'>
 				<img>
 				<p><a>Регистрация</a></p>
@@ -41,97 +41,97 @@
 				<p><a>Установка HTML-кода</a></p>
 			</div>
 		</div>
-		<div class='installHTML'>
-			<h3>УСТАНОВКА HTML-КОДА</h3>
+		<div class='installHTML grey'>
+			<h3 class='h3-font30'>УСТАНОВКА HTML-КОДА</h3>
 			<div>
 				<span></span>
-				<h5><a>Установка HTML-кода Webim для сайтов на Joomla</a></h5>
-				<p>Документация по внедрению сервиса Webim на сайтах, построенных на базе<b>CMS Joomla</b>.</p>
+				<h5 class='p-font--h5'><a>Установка HTML-кода Webim для сайтов на Joomla</a></h5>
+				<p class='p-font--h5p'>Документация по внедрению сервиса Webim на сайтах, построенных на базе<b>CMS Joomla</b>.</p>
 			</div>
 			<div>
 				<span></span>
-				<h5><a>Установка HTML-кода Webim для сайтов на Wordrpess</a></h5>
-				<p>Документация по внедрению сервиса Webim на сайтах, построенных на базе<b>Wordrpess</b>.</p>
+				<h5 class='p-font--h5'><a>Установка HTML-кода Webim для сайтов на Wordrpess</a></h5>
+				<p class='p-font--h5p'>Документация по внедрению сервиса Webim на сайтах, построенных на базе<b>Wordrpess</b>.</p>
 			</div>
 			<div>
 				<span></span>
-				<h5><a>Установка HTML-кода Webim для сайтов на uCoz.ru</a></h5>
-				<p>Документация по внедрению сервиса Webim на сайтах, построенных на базе<b>uCoz.ru</b>.</p>
+				<h5 class='p-font--h5'><a>Установка HTML-кода Webim для сайтов на uCoz.ru</a></h5>
+				<p class='p-font--h5p'>Документация по внедрению сервиса Webim на сайтах, построенных на базе<b>uCoz.ru</b>.</p>
 			</div>
 			<div>
 				<span></span>
-				<h5><a>Установка HTML-кода Webim для сайтов на webasyst.ru</a></h5>
-				<p>Документация по внедрению сервиса Webim на сайтах, построенных на базе<b>webasyst.ru</b>.</p>
+				<h5 class='p-font--h5'><a>Установка HTML-кода Webim для сайтов на webasyst.ru</a></h5>
+				<p class='p-font--h5p'>Документация по внедрению сервиса Webim на сайтах, построенных на базе<b>webasyst.ru</b>.</p>
 			</div>
 			<div>
 				<span></span>
-				<h5><a>Установка HTML-кода Webim для любого сайта</a></h5>
-				<p>Документация по внедрению сервиса Webim на сайтах с другой CMS или написанных вручную.</p>
+				<h5 class='p-font--h5'><a>Установка HTML-кода Webim для любого сайта</a></h5>
+				<p class='p-font--h5p'>Документация по внедрению сервиса Webim на сайтах с другой CMS или написанных вручную.</p>
 			</div>
 		</div>
 		<div class='installApp'>
-			<h3>УСТАНОВКА ПРИЛОЖЕНИЯ ДЛЯ ОПЕРАТОРОВ WEBIM DASHBOARD</h3>
+			<h3 class='h3-font30'>УСТАНОВКА ПРИЛОЖЕНИЯ ДЛЯ ОПЕРАТОРОВ WEBIM DASHBOARD</h3>
 			<p>Чтобы быть на связи с клиентами всегда, установите приложение Webim Dashboard</p>
 			<div>
 				<span></span>
-				<h5><a>Установка приложения Webim Dashboard для iPhone</a></h5>
-				<p>Документация по установке дополнительного программного обеспечения для операторов <b>сервиса Webim</b>, использующих iPhone/iPad/etc от компании Apple.</p>
+				<h5 class='p-font--h5'><a>Установка приложения Webim Dashboard для iPhone</a></h5>
+				<p class='p-font--h5p'>Документация по установке дополнительного программного обеспечения для операторов <b>сервиса Webim</b>, использующих iPhone/iPad/etc от компании Apple.</p>
 			</div>
 			<div>
 				<span></span>
-				<h5><a>Установка приложения Webim Dashboard для Android</a></h5>
-				<p>Документация по установке дополнительного программного обеспечения для операторов <b>сервиса Webim</b>, использующих платформу Google Android.</p>
+				<h5 class='p-font--h5'><a>Установка приложения Webim Dashboard для Android</a></h5>
+				<p class='p-font--h5p'>Документация по установке дополнительного программного обеспечения для операторов <b>сервиса Webim</b>, использующих платформу Google Android.</p>
 			</div>
 			<div>
 				<span></span>
-				<h5><a>Установка приложения Webim Dashboard для Ubuntu</a></h5>
-				<p>Документация по установке дополнительного программного обеспечения для операторов <b>сервиса Webim</b>, использующих платформу Ubuntu.</p>
+				<h5 class='p-font--h5'><a>Установка приложения Webim Dashboard для Ubuntu</a></h5>
+				<p class='p-font--h5p'>Документация по установке дополнительного программного обеспечения для операторов <b>сервиса Webim</b>, использующих платформу Ubuntu.</p>
 			</div>
 			<div>
 				<span></span>
-				<h5><a>Установка приложения Webim Dashboard</a></h5>
-				<p>Документация по установке дополнительного программного обеспечения для операторов <b>сервиса Webim</b> под ОС Microsoft Windows.</p>
+				<h5 class='p-font--h5'><a>Установка приложения Webim Dashboard</a></h5>
+				<p class='p-font--h5p'>Документация по установке дополнительного программного обеспечения для операторов <b>сервиса Webim</b> под ОС Microsoft Windows.</p>
 			</div>
 			<div>
 				<span></span>
-				<h5><a>Создание приложения Webim для Mac OS </a></h5>
-				<p>Пошаговая инструкция создания приложения для оператора Webim для Mac OS с помощью Fluid</p>
+				<h5 class='p-font--h5'><a>Создание приложения Webim для Mac OS </a></h5>
+				<p class='p-font--h5p'>Пошаговая инструкция создания приложения для оператора Webim для Mac OS с помощью Fluid</p>
 			</div>	
 		</div>
-		<div class='afterInst'>
-			<h3>ЧТО ВАС ЖДЕТ ПОСЛЕ УСТАНОВКИ</h3>
-			<p>Идейные соображения высшего порядка, а также сложившаяся структура организации позволяет</p>
+		<div class='afterInst grey'>
+			<h3 class='h3-font30'>ЧТО ВАС ЖДЕТ ПОСЛЕ УСТАНОВКИ</h3>
+			<p class='p-font'>Идейные соображения высшего порядка, а также сложившаяся структура организации позволяет</p>
 			<div>
 				<img>
-				<p><b>Шаг 1.</b>Создание учетной записи компании и администратора</p>
+				<p class='p-font--18px'><b class='p-font--18px-b'>Шаг 1.</b>Создание учетной записи компании и администратора</p>
 			</div>
 			<div>
 				<img>
-				<p><b>Шаг 2.</b>Активация учетной записи</p>
+				<p class='p-font--18px'><b class='p-font--18px-b'>Шаг 2.</b>Активация учетной записи</p>
 			</div>
 			<div>
 				<img>
-				<p><b>Шаг 3.</b>Начальная настройка</p>
+				<p class='p-font--18px'><b class='p-font--18px-b'>Шаг 3.</b>Начальная настройка</p>
 			</div>
 			<div>
 				<img>
-				<p><b>Шаг 4.</b>Установка кнопки Webim на сайт/p>
+				<p class='p-font--18px'><b class='p-font--18px-b'>Шаг 4.</b>Установка кнопки Webim на сайт</p>
 			</div>
 			<div>
 				<img>
-				<p><b>Шаг 5.</b>Регистрация оператора</p>
+				<p class='p-font--18px'><b class='p-font--18px-b'>Шаг 5.</b>Регистрация оператора</p>
 			</div>
 			<div>
 				<img>
-				<p><b>Шаг 6.</b>Тест сервиса</p>
+				<p class='p-font--18px'><b class='p-font--18px-b'>Шаг 6.</b>Тест сервиса</p>
 			</div>
 			<div class='price'>
-				<button class='btn'>Все возможности Webim</button>
-				<button class='btn free'>Протестировать бесплатно</button>
+				<button class='btn left-btn'>Все возможности Webim</button>
+				<button class='btn free left-btn'>Протестировать бесплатно</button>
 			</div>
 		</div>
 		<div class='services'>
-			<h6>Webim – это не только онлайн-консультант. Интегрируйте и другие каналы, чтобы клиенты могли обращаться к вам любым удобным способом</h6>
+			<h6 class='p-font--18px'>Webim – это не только онлайн-консультант. Интегрируйте и другие каналы, чтобы клиенты могли обращаться к вам любым удобным способом</h6>
 			<div class='servicesCom'>
 				<div class='_1col'>
 					<div>
