--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
+	<link href='css/background.css' rel='stylesheet' type='text/css' />
+	<link href='css/style.css' rel='stylesheet' type='text/css' />
+	<link href='css/header_install.css' rel='stylesheet' type='text/css' />
 </head>
 <body>
 	<div class='wrapper'>
@@ -19,7 +22,7 @@
 				<p>Партнерам</p>
 				<p>Помощь</p>
 			</div>
-			<img>
+			<img src='img/header_logo.png'>
 		</div>
 		<div class='install grey'>
 			<h3 class='h3-font36'>УСТАНОВКА WEBIM</h3>
@@ -206,6 +209,6 @@
 			</div>
 		</div>
 	</div>
-	<script src='dist/main.js'></script>
+	<!-- <script src='dist/main.js'></script> -->
 </body>
 </html>
