Добавление стилей для разделов включающих информацию по установке

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link href='css/background.css' rel='stylesheet' type='text/css' />
 	<link href='css/style.css' rel='stylesheet' type='text/css' />
 	<link href='css/header_install.css' rel='stylesheet' type='text/css' />
+	<link href='css/sprite.css' rel='stylesheet' type='text/css' />
 </head>
 <body>
 	<div class='wrapper'>
@@ -35,13 +36,17 @@
 		<div class='easyInst'>
 			<h3 class='h3-font30'>ПРОСТАЯ УСТАНОВКА</h3>
 			<p class='p-font'>Установка онлайн-консультанта Webim не займет более 15 минут</p>
-			<div class='inst-reg'>
-				<img>
-				<p><a>Регистрация</a></p>
-			</div>
-			<div class='inst-HTML'>
-				<img>
-				<p><a>Установка HTML-кода</a></p>
+			<div>
+				<div class='inst-reg'>
+					<div></div>
+					<p><a>Регистрация</a></p>
+					<span>1</span>
+				</div>
+				<div class='inst-HTML'>
+					<div></div>
+					<p><a>Установка HTML-кода</a></p>
+					<span>2</span>
+				</div>
 			</div>
 		</div>
 		<div class='installHTML grey'>
@@ -74,26 +79,26 @@
 		</div>
 		<div class='installApp'>
 			<h3 class='h3-font30'>УСТАНОВКА ПРИЛОЖЕНИЯ ДЛЯ ОПЕРАТОРОВ WEBIM DASHBOARD</h3>
-			<p>Чтобы быть на связи с клиентами всегда, установите приложение Webim Dashboard</p>
+			<p class='p-font'>Чтобы быть на связи с клиентами всегда, установите приложение Webim Dashboard</p>
 			<div>
 				<span></span>
 				<h5 class='p-font--h5'><a>Установка приложения Webim Dashboard для iPhone</a></h5>
-				<p class='p-font--h5p'>Документация по установке дополнительного программного обеспечения для операторов <b>сервиса Webim</b>, использующих iPhone/iPad/etc от компании Apple.</p>
+				<p class='p-font--h5p'>Документация по установке дополнительного программного обеспечения для операторов <br><b>сервиса Webim</b>, использующих iPhone/iPad/etc от компании Apple.</p>
 			</div>
 			<div>
 				<span></span>
 				<h5 class='p-font--h5'><a>Установка приложения Webim Dashboard для Android</a></h5>
-				<p class='p-font--h5p'>Документация по установке дополнительного программного обеспечения для операторов <b>сервиса Webim</b>, использующих платформу Google Android.</p>
+				<p class='p-font--h5p'>Документация по установке дополнительного программного обеспечения для операторов <br><b>сервиса Webim</b>, использующих платформу Google Android.</p>
 			</div>
 			<div>
 				<span></span>
 				<h5 class='p-font--h5'><a>Установка приложения Webim Dashboard для Ubuntu</a></h5>
-				<p class='p-font--h5p'>Документация по установке дополнительного программного обеспечения для операторов <b>сервиса Webim</b>, использующих платформу Ubuntu.</p>
+				<p class='p-font--h5p'>Документация по установке дополнительного программного обеспечения для операторов <br><b>сервиса Webim</b>, использующих платформу Ubuntu.</p>
 			</div>
 			<div>
 				<span></span>
 				<h5 class='p-font--h5'><a>Установка приложения Webim Dashboard</a></h5>
-				<p class='p-font--h5p'>Документация по установке дополнительного программного обеспечения для операторов <b>сервиса Webim</b> под ОС Microsoft Windows.</p>
+				<p class='p-font--h5p'>Документация по установке дополнительного программного обеспечения для операторов <br><b>сервиса Webim</b> под ОС Microsoft Windows.</p>
 			</div>
 			<div>
 				<span></span>
@@ -172,7 +177,7 @@
 				</div>
 			</div>
 		</div>
-		<div class='footer'>
+		<div class='footer' style="background: url('img/footer.png') no-repeat">
 			<div class='copyright'>
 				<img>
 				<p>Webim 2008-2017</p>
@@ -209,6 +214,6 @@
 			</div>
 		</div>
 	</div>
-	<!-- <script src='dist/main.js'></script> -->
+	<script src='dist/main.js'></script>
 </body>
 </html>
