Стили для desktop созданы полностью

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link href='css/style.css' rel='stylesheet' type='text/css' />
 	<link href='css/header_install.css' rel='stylesheet' type='text/css' />
 	<link href='css/sprite.css' rel='stylesheet' type='text/css' />
+	<link href='css/afterInst_servic.css' rel='stylesheet' type='text/css' />
 </head>
 <body>
 	<div class='wrapper'>
@@ -110,27 +111,27 @@
 			<h3 class='h3-font30'>ЧТО ВАС ЖДЕТ ПОСЛЕ УСТАНОВКИ</h3>
 			<p class='p-font'>Идейные соображения высшего порядка, а также сложившаяся структура организации позволяет</p>
 			<div>
-				<img>
+				<div class='stage1'></div>
 				<p class='p-font--18px'><b class='p-font--18px-b'>Шаг 1.</b>Создание учетной записи компании и администратора</p>
 			</div>
 			<div>
-				<img>
+				<div class='stage2'></div>
 				<p class='p-font--18px'><b class='p-font--18px-b'>Шаг 2.</b>Активация учетной записи</p>
 			</div>
 			<div>
-				<img>
+				<div class='stage3'></div>
 				<p class='p-font--18px'><b class='p-font--18px-b'>Шаг 3.</b>Начальная настройка</p>
 			</div>
 			<div>
-				<img>
+				<div class='stage4'></div>
 				<p class='p-font--18px'><b class='p-font--18px-b'>Шаг 4.</b>Установка кнопки Webim на сайт</p>
 			</div>
 			<div>
-				<img>
+				<div class='stage5'></div>
 				<p class='p-font--18px'><b class='p-font--18px-b'>Шаг 5.</b>Регистрация оператора</p>
 			</div>
 			<div>
-				<img>
+				<div class='stage6'></div>
 				<p class='p-font--18px'><b class='p-font--18px-b'>Шаг 6.</b>Тест сервиса</p>
 			</div>
 			<div class='price'>
@@ -143,49 +144,49 @@
 			<div class='servicesCom'>
 				<div class='_1col'>
 					<div>
-						<img>
+						<div class='_1col-social'></div>
 						<p>Социальные сети</p>
 					</div>
 					<div>
-						<img>
+						<div class='_1col-mes'></div>
 						<p>Мессенджеры</p>
 					</div>
 					<div>
-						<img>
+						<div class='_1col-chat'></div>
 						<p>Чат-боты</p>
 					</div>
 				</div>
 				<div class='_2col'>
 					<div>
-						<img>
+						<div class='_2col-feedback'v></div>
 						<p>Форма обратной связи</p>
 					</div>
 					<div>
-						<img>
+						<div class='_2col-ya'></div>
 						<p>Яндекс.Диалоги</p>
 					</div>
 				</div>
 				<div class='_3col'>
 					<div>
-						<img>
-						<p>Чат в вашем мобильном приложении </p>
+						<div class='_3col-mob'></div>
+						<p>Чат в вашем<br> мобильном приложении </p>
 					</div>
 					<div>
-						<img>
+						<div class='_3col-email'></div>
 						<p>Электронная почта</p>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class='footer' style="background: url('img/footer.png') no-repeat">
+		<div class='footer'>
 			<div class='copyright'>
-				<img>
+				<div></div>
 				<p>Webim 2008-2017</p>
 				<p>Все права защищены</p>
 			</div>
 			<div class='contact'>
 				<div class='telCom'>
-					<img>
+					<div></div>
 					<p>+7(800)500-49-32</p>
 				</div>
 				<div class='telMsk'>
@@ -202,18 +203,19 @@
 				<p>sales@webim.ru</p>
 				<p>понедельник-пятница с 10.00 - 18.00</p>
 				<div class='social'>
-					<div class='socialItem VK'>
+					<div class='socialItem-VK'>
 					</div>
-					<div class='socialItem Face'>
+					<div class='socialItem-Face'>
 					</div>
-					<div class='socialItem Twit'>
+					<div class='socialItem-Twit'>
 					</div>
-					<div class='socialItem Skype'>
+					<div class='socialItem-Skype'>
 					</div>
 				</div>
 			</div>
+			<div></div>
 		</div>
 	</div>
-	<script src='dist/main.js'></script>
+	<!-- <script src='dist/main.js'></script> -->
 </body>
 </html>
