Сделаны стили для мобильных и декстопных устрйоств

--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
-	<link href='css/background.css' rel='stylesheet' type='text/css' />
+	<link href='css/background_header_footerAll.css' rel='stylesheet' type='text/css' />
 	<link href='css/style.css' rel='stylesheet' type='text/css' />
 	<link href='css/header_install.css' rel='stylesheet' type='text/css' />
-	<link href='css/sprite.css' rel='stylesheet' type='text/css' />
-	<link href='css/afterInst_servic.css' rel='stylesheet' type='text/css' />
+	<link href='css/easyInst_installHTML_installApp.css' rel='stylesheet' type='text/css' />
+	<link href='css/afterInst_service.css' rel='stylesheet' type='text/css' media="(min-width: 751px)" />
+	<link href='css/mob.css' rel='stylesheet' type='text/css' media="(max-width: 750px)" />
 </head>
 <body>
 	<div class='wrapper'>
 		<div class='header'>
+			<div class='gamb'>
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
 			<div class='reg'>
 				<p><a>Вход</a></p>
 				<p><a>Регистрация</a></p>
@@ -24,19 +30,19 @@
 				<p>Партнерам</p>
 				<p>Помощь</p>
 			</div>
-			<img src='img/header_logo.png'>
+			<div class='img'></div>
 		</div>
 		<div class='install grey'>
 			<h3 class='h3-font36'>УСТАНОВКА WEBIM</h3>
-			<p class='p-font'>Установка онлайн-консультанта Webim на ваш сайт не займет много времени. Вы можете установить онлайн-консультант Webim на ваш сайт и протестировать его в течение 7 дней бесплатно. </p>
+			<p class='p-font'>Установка онлайн-консультанта Webim<br> на ваш сайт не займет много времени.<br> Вы можете установить онлайн-консультант Webim на ваш сайт и протестировать<br> его в течение 7 дней бесплатно. </p>
 			<div class='price'>
 				<button class='btn left-btn'>ПОПРОБОВАТЬ БЕСПЛАТНО</button>
 				<button class='btn-tarif right-btn'>ТАРИФЫ</button>
 			</div>
 		</div>
 		<div class='easyInst'>
-			<h3 class='h3-font30'>ПРОСТАЯ УСТАНОВКА</h3>
-			<p class='p-font'>Установка онлайн-консультанта Webim не займет более 15 минут</p>
+			<h3 class='h3-font30'>ПРОСТАЯ<br> УСТАНОВКА</h3>
+			<p class='p-font'>Установка онлайн-консультанта Webim<br> не займет более 15 минут</p>
 			<div>
 				<div class='inst-reg'>
 					<div></div>
@@ -51,86 +57,86 @@
 			</div>
 		</div>
 		<div class='installHTML grey'>
-			<h3 class='h3-font30'>УСТАНОВКА HTML-КОДА</h3>
+			<h3 class='h3-font30'>УСТАНОВКА<br> HTML-КОДА</h3>
 			<div>
 				<span></span>
-				<h5 class='p-font--h5'><a>Установка HTML-кода Webim для сайтов на Joomla</a></h5>
-				<p class='p-font--h5p'>Документация по внедрению сервиса Webim на сайтах, построенных на базе<b>CMS Joomla</b>.</p>
+				<h5 class='p-font--h5'><a>Установка HTML-кода Webim<br> для сайтов на Joomla</a></h5>
+				<p class='p-font--h5p'>Документация по внедрению сервиса Webim на сайтах, построенных на базе <b>CMS Joomla</b>.</p>
 			</div>
 			<div>
 				<span></span>
-				<h5 class='p-font--h5'><a>Установка HTML-кода Webim для сайтов на Wordrpess</a></h5>
-				<p class='p-font--h5p'>Документация по внедрению сервиса Webim на сайтах, построенных на базе<b>Wordrpess</b>.</p>
+				<h5 class='p-font--h5'><a>Установка HTML-кода Webim<br> для сайтов на Wordrpess</a></h5>
+				<p class='p-font--h5p'>Документация по внедрению сервиса Webim на сайтах, построенных на базе <b>Wordrpess</b>.</p>
 			</div>
 			<div>
 				<span></span>
-				<h5 class='p-font--h5'><a>Установка HTML-кода Webim для сайтов на uCoz.ru</a></h5>
-				<p class='p-font--h5p'>Документация по внедрению сервиса Webim на сайтах, построенных на базе<b>uCoz.ru</b>.</p>
+				<h5 class='p-font--h5'><a>Установка HTML-кода Webim<br> для сайтов на uCoz.ru</a></h5>
+				<p class='p-font--h5p'>Документация по внедрению сервиса Webim на сайтах, построенных на базе <b>uCoz.ru</b>.</p>
 			</div>
 			<div>
 				<span></span>
-				<h5 class='p-font--h5'><a>Установка HTML-кода Webim для сайтов на webasyst.ru</a></h5>
-				<p class='p-font--h5p'>Документация по внедрению сервиса Webim на сайтах, построенных на базе<b>webasyst.ru</b>.</p>
+				<h5 class='p-font--h5'><a>Установка HTML-кода Webim<br> для сайтов на webasyst.ru</a></h5>
+				<p class='p-font--h5p'>Документация по внедрению сервиса Webim на сайтах, построенных на базе <b>webasyst.ru</b>.</p>
 			</div>
 			<div>
 				<span></span>
-				<h5 class='p-font--h5'><a>Установка HTML-кода Webim для любого сайта</a></h5>
+				<h5 class='p-font--h5'><a>Установка HTML-кода Webim<br> для любого сайта</a></h5>
 				<p class='p-font--h5p'>Документация по внедрению сервиса Webim на сайтах с другой CMS или написанных вручную.</p>
 			</div>
 		</div>
 		<div class='installApp'>
-			<h3 class='h3-font30'>УСТАНОВКА ПРИЛОЖЕНИЯ ДЛЯ ОПЕРАТОРОВ WEBIM DASHBOARD</h3>
+			<h3 class='h3-font30'>УСТАНОВКА ПРИЛОЖЕНИЯ<br> ДЛЯ ОПЕРАТОРОВ<br> WEBIM DASHBOARD</h3>
 			<p class='p-font'>Чтобы быть на связи с клиентами всегда, установите приложение Webim Dashboard</p>
 			<div>
 				<span></span>
-				<h5 class='p-font--h5'><a>Установка приложения Webim Dashboard для iPhone</a></h5>
+				<h5 class='p-font--h5'><a>Установка приложения<br> Webim Dashboard для iPhone</a></h5>
 				<p class='p-font--h5p'>Документация по установке дополнительного программного обеспечения для операторов <br><b>сервиса Webim</b>, использующих iPhone/iPad/etc от компании Apple.</p>
 			</div>
 			<div>
 				<span></span>
-				<h5 class='p-font--h5'><a>Установка приложения Webim Dashboard для Android</a></h5>
+				<h5 class='p-font--h5'><a>Установка приложения<br> Webim Dashboard для Android</a></h5>
 				<p class='p-font--h5p'>Документация по установке дополнительного программного обеспечения для операторов <br><b>сервиса Webim</b>, использующих платформу Google Android.</p>
 			</div>
 			<div>
 				<span></span>
-				<h5 class='p-font--h5'><a>Установка приложения Webim Dashboard для Ubuntu</a></h5>
+				<h5 class='p-font--h5'><a>Установка приложения<br> Webim Dashboard для Ubuntu</a></h5>
 				<p class='p-font--h5p'>Документация по установке дополнительного программного обеспечения для операторов <br><b>сервиса Webim</b>, использующих платформу Ubuntu.</p>
 			</div>
 			<div>
 				<span></span>
-				<h5 class='p-font--h5'><a>Установка приложения Webim Dashboard</a></h5>
+				<h5 class='p-font--h5'><a>Установка приложения<br> Webim Dashboard</a></h5>
 				<p class='p-font--h5p'>Документация по установке дополнительного программного обеспечения для операторов <br><b>сервиса Webim</b> под ОС Microsoft Windows.</p>
 			</div>
 			<div>
 				<span></span>
-				<h5 class='p-font--h5'><a>Создание приложения Webim для Mac OS </a></h5>
+				<h5 class='p-font--h5'><a>Создание приложения<br> Webim для Mac OS </a></h5>
 				<p class='p-font--h5p'>Пошаговая инструкция создания приложения для оператора Webim для Mac OS с помощью Fluid</p>
 			</div>	
 		</div>
 		<div class='afterInst grey'>
 			<h3 class='h3-font30'>ЧТО ВАС ЖДЕТ ПОСЛЕ УСТАНОВКИ</h3>
 			<p class='p-font'>Идейные соображения высшего порядка, а также сложившаяся структура организации позволяет</p>
-			<div>
+			<div class='icon'>
 				<div class='stage1'></div>
 				<p class='p-font--18px'><b class='p-font--18px-b'>Шаг 1.</b>Создание учетной записи компании и администратора</p>
 			</div>
-			<div>
+			<div class='icon'>
 				<div class='stage2'></div>
 				<p class='p-font--18px'><b class='p-font--18px-b'>Шаг 2.</b>Активация учетной записи</p>
 			</div>
-			<div>
+			<div class='icon'>
 				<div class='stage3'></div>
 				<p class='p-font--18px'><b class='p-font--18px-b'>Шаг 3.</b>Начальная настройка</p>
 			</div>
-			<div>
+			<div class='icon'>
 				<div class='stage4'></div>
 				<p class='p-font--18px'><b class='p-font--18px-b'>Шаг 4.</b>Установка кнопки Webim на сайт</p>
 			</div>
-			<div>
+			<div class='icon'>
 				<div class='stage5'></div>
 				<p class='p-font--18px'><b class='p-font--18px-b'>Шаг 5.</b>Регистрация оператора</p>
 			</div>
-			<div>
+			<div class='icon'>
 				<div class='stage6'></div>
 				<p class='p-font--18px'><b class='p-font--18px-b'>Шаг 6.</b>Тест сервиса</p>
 			</div>
@@ -180,7 +186,7 @@
 		</div>
 		<div class='footer'>
 			<div class='copyright'>
-				<div></div>
+				<div class='copyright1'></div>
 				<p>Webim 2008-2017</p>
 				<p>Все права защищены</p>
 			</div>
