Верстка сайта завершена. Стили и анимация добавлены

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 	<link href='css/header_install.css' rel='stylesheet' type='text/css' />
 	<link href='css/easyInst_installHTML_installApp.css' rel='stylesheet' type='text/css' />
 	<link href='css/afterInst_service.css' rel='stylesheet' type='text/css' media="(min-width: 751px)" />
-	<link href='css/mob.css' rel='stylesheet' type='text/css' media="(max-width: 750px)" />
+	<link href='css/afterInst_services_mob.css' rel='stylesheet' type='text/css' media="(max-width: 750px)" />
+	<link href='css/dinamic.css' rel='stylesheet' type='text/css' />
+	<link href='css/foto.css' rel='stylesheet' type='text/css' />
 </head>
 <body>
 	<div class='wrapper'>
@@ -25,10 +27,10 @@
 				<p><a>Регистрация</a></p>
 			</div>
 			<div class='menu'>
-				<p>Возможности</p>
-				<p>Тарифы</p>
-				<p>Партнерам</p>
-				<p>Помощь</p>
+				<p class='line'><a>Возможности</a></p>
+				<p><a>Тарифы</a></p>
+				<p><a>Партнерам</a></p>
+				<p><a>Помощь</a></p>
 			</div>
 			<div class='img'></div>
 		</div>
@@ -61,22 +63,22 @@
 			<div>
 				<span></span>
 				<h5 class='p-font--h5'><a>Установка HTML-кода Webim<br> для сайтов на Joomla</a></h5>
-				<p class='p-font--h5p'>Документация по внедрению сервиса Webim на сайтах, построенных на базе <b>CMS Joomla</b>.</p>
+				<p class='p-font--h5p'>Документация по внедрению сервиса Webim на сайтах, построенных на базе <b>CMS Joomla.</b></p>
 			</div>
 			<div>
 				<span></span>
 				<h5 class='p-font--h5'><a>Установка HTML-кода Webim<br> для сайтов на Wordrpess</a></h5>
-				<p class='p-font--h5p'>Документация по внедрению сервиса Webim на сайтах, построенных на базе <b>Wordrpess</b>.</p>
+				<p class='p-font--h5p'>Документация по внедрению сервиса Webim на сайтах, построенных на базе <b>Wordrpess.</b></p>
 			</div>
 			<div>
 				<span></span>
 				<h5 class='p-font--h5'><a>Установка HTML-кода Webim<br> для сайтов на uCoz.ru</a></h5>
-				<p class='p-font--h5p'>Документация по внедрению сервиса Webim на сайтах, построенных на базе <b>uCoz.ru</b>.</p>
+				<p class='p-font--h5p'>Документация по внедрению сервиса Webim на сайтах, построенных на базе <b>uCoz.ru.</b></p>
 			</div>
 			<div>
 				<span></span>
 				<h5 class='p-font--h5'><a>Установка HTML-кода Webim<br> для сайтов на webasyst.ru</a></h5>
-				<p class='p-font--h5p'>Документация по внедрению сервиса Webim на сайтах, построенных на базе <b>webasyst.ru</b>.</p>
+				<p class='p-font--h5p'>Документация по внедрению сервиса Webim на сайтах, построенных на базе <b>webasyst.ru.</b></p>
 			</div>
 			<div>
 				<span></span>
@@ -85,60 +87,60 @@
 			</div>
 		</div>
 		<div class='installApp'>
-			<h3 class='h3-font30'>УСТАНОВКА ПРИЛОЖЕНИЯ<br> ДЛЯ ОПЕРАТОРОВ<br> WEBIM DASHBOARD</h3>
+			<h3 class='h3-font30'>УСТАНОВКА<br> ПРИЛОЖЕНИЯ<br> ДЛЯ ОПЕРАТОРОВ<br> WEBIM DASHBOARD</h3>
 			<p class='p-font'>Чтобы быть на связи с клиентами всегда, установите приложение Webim Dashboard</p>
 			<div>
 				<span></span>
 				<h5 class='p-font--h5'><a>Установка приложения<br> Webim Dashboard для iPhone</a></h5>
-				<p class='p-font--h5p'>Документация по установке дополнительного программного обеспечения для операторов <br><b>сервиса Webim</b>, использующих iPhone/iPad/etc от компании Apple.</p>
+				<p class='p-font--h5p'>Документация по установке дополнительного программного обеспечения для операторов <br><b>сервиса Webim,</b> использующих iPhone/iPad/etc от компании Apple.</p>
 			</div>
 			<div>
 				<span></span>
 				<h5 class='p-font--h5'><a>Установка приложения<br> Webim Dashboard для Android</a></h5>
-				<p class='p-font--h5p'>Документация по установке дополнительного программного обеспечения для операторов <br><b>сервиса Webim</b>, использующих платформу Google Android.</p>
+				<p class='p-font--h5p'>Документация по установке дополнительного программного обеспечения для операторов <br><b>сервиса Webim,</b> использующих платформу Google Android.</p>
 			</div>
 			<div>
 				<span></span>
 				<h5 class='p-font--h5'><a>Установка приложения<br> Webim Dashboard для Ubuntu</a></h5>
-				<p class='p-font--h5p'>Документация по установке дополнительного программного обеспечения для операторов <br><b>сервиса Webim</b>, использующих платформу Ubuntu.</p>
+				<p class='p-font--h5p'>Документация по установке дополнительного программного обеспечения для операторов <br><b>сервиса Webim,</b> использующих платформу Ubuntu.</p>
 			</div>
 			<div>
 				<span></span>
 				<h5 class='p-font--h5'><a>Установка приложения<br> Webim Dashboard</a></h5>
-				<p class='p-font--h5p'>Документация по установке дополнительного программного обеспечения для операторов <br><b>сервиса Webim</b> под ОС Microsoft Windows.</p>
+				<p class='p-font--h5p'>Документация по установке дополнительного программного обеспечения для операторов <br><b>сервиса Webim,</b> под ОС Microsoft Windows.</p>
 			</div>
 			<div>
 				<span></span>
 				<h5 class='p-font--h5'><a>Создание приложения<br> Webim для Mac OS </a></h5>
-				<p class='p-font--h5p'>Пошаговая инструкция создания приложения для оператора Webim для Mac OS с помощью Fluid</p>
+				<p class='p-font--h5p'>Пошаговая инструкция создания приложения <br>для оператора Webim для Mac OS<br> с помощью Fluid</p>
 			</div>	
 		</div>
 		<div class='afterInst grey'>
 			<h3 class='h3-font30'>ЧТО ВАС ЖДЕТ ПОСЛЕ УСТАНОВКИ</h3>
-			<p class='p-font'>Идейные соображения высшего порядка, а также сложившаяся структура организации позволяет</p>
+			<p class='p-font'>Идейные соображения высшего порядка,<br> а также сложившаяся структура организации <br>позволяет</p>
 			<div class='icon'>
 				<div class='stage1'></div>
 				<p class='p-font--18px'><b class='p-font--18px-b'>Шаг 1.</b>Создание учетной записи компании и администратора</p>
 			</div>
 			<div class='icon'>
 				<div class='stage2'></div>
-				<p class='p-font--18px'><b class='p-font--18px-b'>Шаг 2.</b>Активация учетной записи</p>
+				<p class='p-font--18px afterInst--icon--p'><b class='p-font--18px-b'>Шаг 2.</b>Активация учетной записи</p>
 			</div>
 			<div class='icon'>
 				<div class='stage3'></div>
-				<p class='p-font--18px'><b class='p-font--18px-b'>Шаг 3.</b>Начальная настройка</p>
+				<p class='p-font--18px afterInst--icon--p'><b class='p-font--18px-b'>Шаг 3.</b>Начальная настройка</p>
 			</div>
 			<div class='icon'>
 				<div class='stage4'></div>
-				<p class='p-font--18px'><b class='p-font--18px-b'>Шаг 4.</b>Установка кнопки Webim на сайт</p>
+				<p class='p-font--18px afterInst--icon--p'><b class='p-font--18px-b'>Шаг 4.</b>Установка кнопки Webim на сайт</p>
 			</div>
 			<div class='icon'>
 				<div class='stage5'></div>
-				<p class='p-font--18px'><b class='p-font--18px-b'>Шаг 5.</b>Регистрация оператора</p>
+				<p class='p-font--18px afterInst--icon--p'><b class='p-font--18px-b'>Шаг 5.</b>Регистрация оператора</p>
 			</div>
 			<div class='icon'>
 				<div class='stage6'></div>
-				<p class='p-font--18px'><b class='p-font--18px-b'>Шаг 6.</b>Тест сервиса</p>
+				<p class='p-font--18px afterInst--icon--p'><b class='p-font--18px-b'>Шаг 6.</b>Тест сервиса</p>
 			</div>
 			<div class='price'>
 				<button class='btn left-btn'>Все возможности Webim</button>
@@ -151,35 +153,35 @@
 				<div class='_1col'>
 					<div>
 						<div class='_1col-social'></div>
-						<p>Социальные сети</p>
+						<p><a>Социальные сети</a></p>
 					</div>
 					<div>
 						<div class='_1col-mes'></div>
-						<p>Мессенджеры</p>
+						<p><a>Мессенджеры</a></p>
 					</div>
 					<div>
 						<div class='_1col-chat'></div>
-						<p>Чат-боты</p>
+						<p><a>Чат-боты</a></p>
 					</div>
 				</div>
 				<div class='_2col'>
 					<div>
 						<div class='_2col-feedback'v></div>
-						<p>Форма обратной связи</p>
+						<p><a>Форма обратной связи</a></p>
 					</div>
 					<div>
 						<div class='_2col-ya'></div>
-						<p>Яндекс.Диалоги</p>
+						<p><a>Яндекс.Диалоги</a></p>
 					</div>
 				</div>
 				<div class='_3col'>
 					<div>
 						<div class='_3col-mob'></div>
-						<p>Чат в вашем<br> мобильном приложении </p>
+						<p><a>Чат в вашем<br> мобильном приложении </a></p>
 					</div>
 					<div>
 						<div class='_3col-email'></div>
-						<p>Электронная почта</p>
+						<p><a>Электронная почта</a></p>
 					</div>
 				</div>
 			</div>
@@ -222,6 +224,7 @@
 			<div></div>
 		</div>
 	</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<!-- <script src='dist/main.js'></script> -->
 </body>
 </html>
