--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 				</div>
 				<div class='_2col'>
 					<div>
-						<div class='_2col-feedback'v></div>
+						<div class='_2col-feedback'></div>
 						<p><a>Форма обратной связи</a></p>
 					</div>
 					<div>
