--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link href='css/afterInst_services_mob.css' rel='stylesheet' type='text/css' media="(max-width: 750px)" />
 	<link href='css/dinamic.css' rel='stylesheet' type='text/css' />
 	<link href='css/foto.css' rel='stylesheet' type='text/css' />
+	<link href='css/button.css' rel='stylesheet' type='text/css' />
 </head>
 <body>
 	<div class='wrapper'>
@@ -166,7 +167,7 @@
 				</div>
 				<div class='_2col'>
 					<div>
-						<div class='_2col-feedback'v></div>
+						<div class='_2col-feedback'></div>
 						<p><a>Форма обратной связи</a></p>
 					</div>
 					<div>
