--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
 	<link href='css/background_header_footerAll.css' rel='stylesheet' type='text/css' />
 	<link href='css/style.css' rel='stylesheet' type='text/css' />
-	<link href='css/header_install.css' rel='stylesheet' type='text/css' />
+	<link href='css/header_install_1.css' rel='stylesheet' type='text/css' />
 	<link href='css/easyInst_installHTML_installApp.css' rel='stylesheet' type='text/css' />
 	<link href='css/afterInst_service.css' rel='stylesheet' type='text/css' media="(min-width: 751px)" />
 	<link href='css/afterInst_services_mob.css' rel='stylesheet' type='text/css' media="(max-width: 750px)" />
