--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<link href='css/style.css' rel='stylesheet' type='text/css' />
 	<link href='css/header_install_1.css' rel='stylesheet' type='text/css' />
 	<link href='css/easyInst_installHTML_installApp.css' rel='stylesheet' type='text/css' />
-	<link href='css/afterInst_service.css' rel='stylesheet' type='text/css' media="(min-width: 751px)" />
-	<link href='css/afterInst_services_mob.css' rel='stylesheet' type='text/css' media="(max-width: 750px)" />
+	<link href='css/afterInst_service_1.css' rel='stylesheet' type='text/css' media="(min-width: 751px)" />
+	<link href='css/afterInst_services_mob_1.css' rel='stylesheet' type='text/css' media="(max-width: 750px)" />
 	<link href='css/dinamic.css' rel='stylesheet' type='text/css' />
 	<link href='css/foto.css' rel='stylesheet' type='text/css' />
 	<link href='css/button.css' rel='stylesheet' type='text/css' />
